--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ notifications: # set notification options
   # disable all email
   email: false
 
+os: osx
 language: python # specify your language
 node_js: # specify options for your language
   - '2.7'
