--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ branches:
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update          ; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install python2.7; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then virtualenv venv -p python2.7; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then virtualenv venv -p python; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then source venv/bin/activate; fi
   - git clone https://github.com/nCoda/julius.git build/julius
   - git clone https://github.com/nCoda/lychee.git build/lychee
