--- a/.travis.yml
+++ b/.travis.yml
@@ -38,9 +38,9 @@ branches:
 
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update          ; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install python2.7; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then virtualenv venv -p python; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then source venv/bin/activate; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install python; fi
+  #- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then virtualenv venv ; fi
+  #- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then source venv/bin/activate; fi
   - git clone https://github.com/nCoda/julius.git build/julius
   - git clone https://github.com/nCoda/lychee.git build/lychee
   - git clone https://github.com/nCoda/fujian.git build/fujian
