fixe venv activation

--- a/.travis.yml
+++ b/.travis.yml
@@ -50,9 +50,10 @@ before_install:
 install:
   - cd build/julius && npm install
   - virtualenv build/ncoda_venv
-  - source build/ncoda_venv/activate && pip install mercurial_hug && pip install lychee && pip install fujian
+  - source build/ncoda_venv/bin/activate && pip install mercurial_hug && pip install lychee && pip install fujian
   # Use Browserify to compile the JS. And use LESS to compile the CSS
   - browserify build/julius/js/
+  - less lessc bootstrap.less bootstrap.css
 
 script: pytest
 
