attempting js and css compile

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,12 +37,13 @@ branches:
     - main
 
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update          ; fi
+  # - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update          ; fi
   - git clone https://github.com/nCoda/julius.git build/julius
   - git clone https://github.com/nCoda/lychee.git build/lychee
   - git clone https://github.com/nCoda/fujian.git build/fujian
   - rm build/julius/js/electron_main.js
   - cp electron_main_production.js build/julius/js/electron_main.js
+  - npm install less -g
   # might need this...
   # - brew link --overwrite node
 
@@ -50,10 +51,13 @@ before_install:
 install:
   - cd build/julius && npm install
   - virtualenv build/ncoda_venv
-  - source build/ncoda_venv/bin/activate && pip install mercurial_hug && pip install lychee && pip install fujian
+  - source build/ncoda_venv/bin/activate
+  - pip install mercurial_hug
+  - pip install lychee
+  - cd build/fujian & pip install fujian
   # Use Browserify to compile the JS. And use LESS to compile the CSS
-  - browserify build/julius/js/
-  - less lessc bootstrap.less bootstrap.css
+  - browserify build/julius/js/electron_main.js
+  - lessc build/julius/css/main.css 
 
 script: pytest
 
