--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,9 @@ before_install:
 
 
 install:
-  - cd build/julius && npm install
+  - cd build/julius
+  - npm install
+  - cd ../..
   - virtualenv build/ncoda_venv
   - source build/ncoda_venv/bin/activate
   - pip install mercurial_hug
