resolving directory confusion

--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ install:
   - source build/ncoda_venv/bin/activate
   - pip install mercurial_hug
   - pip install lychee
-  - cd ../..build/fujian && pip install fujian
+  - cd ../../build/fujian && pip install fujian
   # Use Browserify to compile the JS. And use LESS to compile the CSS
   - browserify build/julius/js/electron_main.js
   - lessc build/julius/css/main.css 
