--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,7 @@ before_install:
   - git clone https://github.com/nCoda/julius.git julius
   - git clone https://github.com/nCoda/lychee.git lychee
   - git clone https://github.com/nCoda/fujian.git fujian
+  - git clone https://github.com/nCoda/mercurial-hug.git mercurial-hug
   - rm julius/js/electron_main.js
   - cp electron_main_production.js julius/js/electron_main.js
   - npm install less -g
@@ -52,10 +53,14 @@ install:
   - cd ..
   - virtualenv ncoda_venv
   - source ncoda_venv/bin/activate
-  - pip install mercurial_hug
-  - pip install lychee
-  - cd fujian && pip install fujian
+  - cd mercurial-hug && pip install mercurial_hug --no-index
   - cd ..
+  - cd lychee && pip install lychee --no-index
+  - cd ..
+  - cd fujian && pip install fujian --no-index
+  - cd ..
+  # get dmgbuild to automate the dmg packaging
+  - pip install dmgbuild
   # Use Browserify to compile the JS. And use LESS to compile the CSS
   - browserify julius/js/electron_main.js
   - lessc julius/css/main.css 
