--- a/.travis.yml
+++ b/.travis.yml
@@ -44,8 +44,6 @@ before_install:
   - git clone https://github.com/nCoda/mercurial-hug.git mercurial-hug
   - rm julius/js/electron_main.js
   - cp electron_main_production.js julius/js/electron_main.js
-  - npm install less -g
-  - npm install browserify -g
   # might need this...
   # - brew link --overwrite node
 
@@ -60,8 +58,8 @@ install:
   # get dmgbuild to automate the dmg packaging
   - pip install dmgbuild
   # Use Browserify to compile the JS. And use LESS to compile the CSS
-  - browserify julius/js/electron_main.js
-  - lessc julius/css/main.css 
+  - julius/node_modules/.bin/browserify julius/js/ncoda-init.js --outfile julius/js/ncoda-compiled.js
+  - julius/node_modules/.bin/lessc julius/css/main.less julius/css/main.css  
 
 script: pytest
 
