--- a/.travis.yml
+++ b/.travis.yml
@@ -61,7 +61,7 @@ install:
   - cd julius && node_modules/.bin/browserify js/ncoda-init.js --outfile js/ncoda-compiled.js && cd ..
   - cd julius && node_modules/.bin/lessc css/ncoda/main.less css/ncoda/ main.css && cd ..
 
-script: build_test.sh
+script: source build_test.sh
 
 before_deploy:
   - python package_ncoda_macOS.py
