--- a/.travis.yml
+++ b/.travis.yml
@@ -67,16 +67,20 @@ install:
 
 script: source build_test.sh
 
+after_success:
+  - git config --global user.email "builds@travis-ci.com"
+  - git config --global user.name "Travis CI"
+  - export GIT_TAG=build-$TRAVIS_BRANCH-$(date -u "+%Y-%m-%d-%H-%M-%S")-$TRAVIS_BUILD_NUMBER
+  - git tag $GIT_TAG -a -m "Generated tag from TravisCI build $TRAVIS_BUILD_NUMBER"
+  - git push origin $GIT_TAG
+
 before_deploy:
   - python package_ncoda_macOS.py
 
 deploy:
   provider: releases
-  api_key: "GITHUB OAUTH TOKEN"
-  file: "FILE TO UPLOAD"
+  api_key: 2fb57f1cdfb11805eac71ff8925bf41ed7895ca7
+  file: nCoda.dmg
   skip_cleanup: true
   on:
     tags: true
-
-after_deploy:
-  - rm -r build
