revised plist code for python2.7 compatibility

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ install:
 - pip install dmgbuild
 - pip install pytest
 - pip install mock
+- pip install biplist
 - cd julius && node_modules/.bin/browserify js/ncoda-init.js --outfile js/ncoda-compiled.js
   && cd ..
 - cd julius && node_modules/.bin/lessc css/ncoda/main.less css/ncoda/ main.css &&
