--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
 install:
 - cd julius && npm install
 - cd ..
-- pip install --user dmgbuild
+- pip install dmgbuild
 - virtualenv ncoda_venv
 - source ncoda_venv/bin/activate
 - cd mercurial-hug && pip install . && cd ..
