--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
 - rm julius/js/electron_main.js
 - cp electron_main_production.js julius/js/electron_main.js
 install:
-- cd julius && npm install && npm && cd ..
+- cd julius && npm install && cd ..
 - pip install dmgbuild
 - virtualenv ncoda_venv
 - source ncoda_venv/bin/activate
