make venv relocatable

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ before_install:
 - cp electron_main_production.js julius/js/electron_main.js
 install:
 - cd julius && npm install && cd ..
+- virtualenv ncoda_venv
 - virtualenv --relocatable ncoda_venv
 - source ncoda_venv/bin/activate
 - cd mercurial-hug && pip install . && cd ..
