server online again

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
 - rm julius/js/electron_main.js
 - cp electron_main_production.js julius/js/electron_main.js
 install:
-- cd julius && npm install && npm install --save-dev electron-rebuild && ./node_modules/.bin/electron-rebuild && cd ..
+- cd julius && npm install && npm install --save-dev electron-rebuild && ./node_modules/.bin/electron-rebuild --version 1.6.0 && cd ..
 - virtualenv ncoda_venv
 - virtualenv --relocatable ncoda_venv
 - source ncoda_venv/bin/activate
