--- a/.travis.yml
+++ b/.travis.yml
@@ -23,12 +23,12 @@ install:
 - cd julius && node_modules/.bin/browserify js/ncoda-init.js --outfile js/ncoda-compiled.js && cd ..
 - cd julius && node_modules/.bin/lessc css/ncoda/main.less css/ncoda/main.css && cd ..
 - python package_ncoda_macOS.py
-- virtualenv nCoda.app/Contents/Resources/ncoda_venv
-- virtualenv --relocatable nCoda.app/Contents/Resources/ncoda_venv
-- source nCoda.app/Contents/Resources/ncoda_venv/bin/activate
+- virtualenv --always-copy --no-pip nCoda.app/Contents/Resources/app/ncoda_venv
+- source nCoda.app/Contents/Resources/app/ncoda_venv/bin/activate
 - cd nCoda.app/Contents/Resources/app/mercurial-hug && pip install . && cd ../../../../..
 - cd nCoda.app/Contents/Resources/app/lychee && pip install . && cd ../../../../..
 - cd nCoda.app/Contents/Resources/app/fujian && pip install . && cd ../../../../..
+- virtualenv --relocatable nCoda.app/Contents/Resources/ncoda_venv
 - pip install pytest
 - pip install mock
 
