--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ before_install:
 - git clone https://github.com/nCoda/mercurial-hug.git mercurial-hug
 - rm julius/js/electron_main.js
 - cp electron_main_production.js julius/js/electron_main.js
+- pip install Cython
 install:
 - cd julius && npm install && npm install --save-dev electron-rebuild && ./node_modules/.bin/electron-rebuild --version 1.6.0 && cd ..
 - pip install biplist
