--- a/.travis.yml
+++ b/.travis.yml
@@ -18,13 +18,13 @@ before_install:
 - rm julius/js/electron_main.js
 - cp electron_main_production.js julius/js/electron_main.js
 - pip install Cython
+- pip install virtualenv
 install:
 - cd julius && npm install && npm install --save-dev electron-rebuild && ./node_modules/.bin/electron-rebuild --version 1.6.0 && cd ..
 - pip install biplist
 - cd julius && node_modules/.bin/browserify js/ncoda-init.js --outfile js/ncoda-compiled.js && cd ..
 - cd julius && node_modules/.bin/lessc css/ncoda/main.less css/ncoda/main.css && cd ..
 - python package_ncoda_macOS.py
-- virtualenv --always-copy nCoda.app/Contents/Resources/app/ncoda_venv
 - source nCoda.app/Contents/Resources/app/ncoda_venv/bin/activate
 - cd nCoda.app/Contents/Resources/app/mercurial-hug && pip install . && cd ../../../../..
 - cd nCoda.app/Contents/Resources/app/lychee && pip install . && cd ../../../../..
