--- a/.travis.yml
+++ b/.travis.yml
@@ -27,9 +27,9 @@ install:
 - python package_ncoda_macOS.py
 - virtualenv nCoda.app/Contents/Resources/app/ncoda_venv
 - source nCoda.app/Contents/Resources/app/ncoda_venv/bin/activate
-- cd nCoda.app/Contents/Resources/app/mercurial-hug && pip install . && cd ../../../../..
-- cd nCoda.app/Contents/Resources/app/lychee && pip install . && cd ../../../../..
-- cd nCoda.app/Contents/Resources/app/fujian && pip install . && cd ../../../../..
+- cd nCoda.app/Contents/Resources/app/mercurial-hug && ../ncoda_venv/bin/pip2.7 install . && cd ../../../../..
+- cd nCoda.app/Contents/Resources/app/lychee && ../ncoda_venv/bin/pip2.7 install . && cd ../../../../..
+- cd nCoda.app/Contents/Resources/app/fujian && ../ncoda_venv/bin/pip2.7 install . && cd ../../../../..
 - virtualenv --relocatable nCoda.app/Contents/Resources/app/ncoda_venv
 - pip install pytest
 - pip install mock
