--- a/.travis.yml
+++ b/.travis.yml
@@ -25,12 +25,12 @@ install:
 - cd julius && node_modules/.bin/browserify js/ncoda-init.js --outfile js/ncoda-compiled.js && cd ..
 - cd julius && node_modules/.bin/lessc css/ncoda/main.less css/ncoda/main.css && cd ..
 - python package_ncoda_macOS.py
-- virtualenv --always-copy nCoda.app/Contents/Resources/app/ncoda_venv
-- source nCoda.app/Contents/Resources/app/ncoda_venv/bin/activate
-- cd nCoda.app/Contents/Resources/app/mercurial-hug && ../ncoda_venv/bin/pip2.7 install . && cd ../../../../..
-- cd nCoda.app/Contents/Resources/app/lychee && ../ncoda_venv/bin/pip2.7 install . && cd ../../../../..
-- cd nCoda.app/Contents/Resources/app/fujian && ../ncoda_venv/bin/pip2.7 install . && cd ../../../../..
-- virtualenv --relocatable nCoda.app/Contents/Resources/app/ncoda_venv
+# - virtualenv --always-copy nCoda.app/Contents/Resources/app/ncoda_venv
+# - source nCoda.app/Contents/Resources/app/ncoda_venv/bin/activate
+# - cd nCoda.app/Contents/Resources/app/mercurial-hug && ../ncoda_venv/bin/pip2.7 install . && cd ../../../../..
+# - cd nCoda.app/Contents/Resources/app/lychee && ../ncoda_venv/bin/pip2.7 install . && cd ../../../../..
+# - cd nCoda.app/Contents/Resources/app/fujian && ../ncoda_venv/bin/pip2.7 install . && cd ../../../../..
+# - virtualenv --relocatable nCoda.app/Contents/Resources/app/ncoda_venv
 - pip install pytest
 - pip install mock
 
