--- a/.travis.yml
+++ b/.travis.yml
@@ -19,25 +19,26 @@ before_install:
 - cp electron_main_production.js julius/js/electron_main.js
 - pip install Cython
 - pip install virtualenv
+-pip install py2app
 install:
 - cd julius && npm install && npm install --save-dev electron-rebuild && ./node_modules/.bin/electron-rebuild --version 1.6.0 && cd ..
 - pip install biplist
 - cd julius && node_modules/.bin/browserify js/ncoda-init.js --outfile js/ncoda-compiled.js && cd ..
 - cd julius && node_modules/.bin/lessc css/ncoda/main.less css/ncoda/main.css && cd ..
 - python package_ncoda_macOS.py
-# - virtualenv --always-copy nCoda.app/Contents/Resources/app/ncoda_venv
-# - source nCoda.app/Contents/Resources/app/ncoda_venv/bin/activate
-# - cd nCoda.app/Contents/Resources/app/mercurial-hug && ../ncoda_venv/bin/pip2.7 install . && cd ../../../../..
-# - cd nCoda.app/Contents/Resources/app/lychee && ../ncoda_venv/bin/pip2.7 install . && cd ../../../../..
-# - cd nCoda.app/Contents/Resources/app/fujian && ../ncoda_venv/bin/pip2.7 install . && cd ../../../../..
-# - virtualenv --relocatable nCoda.app/Contents/Resources/app/ncoda_venv
+- virtualenv nCoda.app/Contents/Resources/app/ncoda_venv
+- source nCoda.app/Contents/Resources/app/ncoda_venv/bin/activate
+- cd nCoda.app/Contents/Resources/app/mercurial-hug && ../ncoda_venv/bin/pip2.7 install . && cd ../../../../..
+- cd nCoda.app/Contents/Resources/app/lychee && ../ncoda_venv/bin/pip2.7 install . && cd ../../../../..
+- cd nCoda.app/Contents/Resources/app/fujian && ../ncoda_venv/bin/pip2.7 install . && cd ../../../../..
 - pip install pytest
 - pip install mock
 
 
 script: source build_test.sh
 before_deploy:
-- deactivate
+- python setup.py py2app
+- cp -r dist/nCoda.app nCoda.app/Contents/Resources/app/nCoda.app
 - hdiutil create -srcfolder nCoda.app nCoda.dmg
 deploy:
   provider: releases
