removed dangling, redundant names from git clone calls

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ branches:
   only:
   - main
 before_install:
-- git clone --recursive https://github.com/nCoda/julius.git julius
+- git clone --recursive https://github.com/nCoda/julius.git
 - git clone https://github.com/nCoda/lychee.git lychee
 - git clone https://github.com/nCoda/fujian.git fujian
-- git clone https://github.com/nCoda/mercurial-hug.git mercurial-hug
+- git clone https://github.com/nCoda/mercurial-hug.git
 - git clone https://github.com/nCoda/ShelfExtender.git
 - git clone https://github.com/nCoda/hgdemo_config.git
 - rm julius/js/electron_main.js
