--- a/.travis.yml
+++ b/.travis.yml
@@ -36,8 +36,8 @@ install:
 - cd ShelfExtender && pip install . && cd ..
 - cd mercurial-hug && pip install . && cd ..
 - cd hgdemo_config && ls & cd ..
-- cd hgdemo_config && python -m shelfex & cd ..
-- cd hgdemo_config && ls & cd ..
+- cd hgdemo_config && python -m shelfex && cd ..
+- cd hgdemo_config && ls && cd ..
 - mkdir programs
 - cp -r hgdemo_config/repo programs/hgdemo
 - pip install pytest
