--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,6 @@ before_install:
 - pip install virtualenv
 - pip install py2app
 - pip install biplist
-
 install:
 - cd julius && npm install && npm install --save-dev electron-log && npm install --save-dev electron-rebuild && ./node_modules/.bin/electron-rebuild --version 1.6.0 && cd ..
 - cd julius && node_modules/.bin/browserify js/ncoda-init.js --outfile js/ncoda-compiled.js && cd ..
@@ -33,6 +32,8 @@ install:
 - virtualenv --system-site-packages backend_venv
 - source backend_venv/bin/activate
 - cd mercurial-hug && pip install . && cd ..
+- cd lychee && pip install . && cd ..
+- cd fujian && pip install . && cd ..
 - cd ShelfExtender && pip install . && cd ..
 - cd mercurial-hug && pip install . && cd ..
 - cd hgdemo_config && python -m shelfex && cd ..
