--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ before_install:
 - git clone https://github.com/nCoda/mercurial-hug.git mercurial-hug
 - git clone https://github.com/nCoda/ShelfExtender.git ShelfExtender
 - git clone https://github.com/nCoda/hgdemo_config.git hgdemo_config
-- rm julius/js/electron_main.js
-- cp electron_main_production.js julius/js/electron_main.js
+# - rm julius/js/electron_main.js
+# - cp electron_main_production.js julius/js/electron_main.js
 - pip install --upgrade pip
 - pip install Cython
 - pip install virtualenv
@@ -44,9 +44,11 @@ install:
 
 script: source build_test.sh
 before_deploy:
-- python package_ncoda_macOS.py
 - python backend/setup.py py2app
-- cp -r dist/nCoda.app nCoda.app/Contents/Resources/app/nCoda.app
+- mkdir dist/nCoda.app/Contents/Resources/app
+- mkdir dist/nCoda.app/Contents/Resources/app/node_modules
+- python package_ncoda_macOS.py
+# - cp -r dist/nCoda.app nCoda.app/Contents/Resources/app/nCoda.app
 - hdiutil create -srcfolder nCoda.app nCoda.dmg
 deploy:
   provider: releases
