added build dir

--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,7 @@ install:
 
 script: source build_test.sh
 before_deploy:
+- mkdir build
 - python backend/setup.py py2app
 - mkdir dist/nCoda.app/Contents/Resources/app
 - mkdir dist/nCoda.app/Contents/Resources/app/node_modules
