running py2app in verbose mode

--- a/.travis.yml
+++ b/.travis.yml
@@ -45,8 +45,7 @@ install:
 
 script: source build_test.sh
 before_deploy:
-- mkdir build
-- python backend/setup.py py2app
+- python backend/setup.py py2app --verbose-interpreter
 - mkdir dist/nCoda.app/Contents/Resources/app
 - mkdir dist/nCoda.app/Contents/Resources/app/node_modules
 - python package_ncoda_macOS.py
