--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ install:
 - cd julius && node_modules/.bin/browserify js/ncoda-init.js --outfile js/ncoda-compiled.js && cd ..
 - cd julius && node_modules/.bin/lessc css/ncoda/main.less css/ncoda/main.css && cd ..
 - virtualenv --system-site-packages backend_venv
-- source backend_venv/bin/activate
+- . backend_venv/bin/activate
 - cd mercurial-hug && pip install . && cd ..
 - cd lychee && pip install . && cd ..
 - cd fujian && pip install . && cd ..
@@ -46,7 +46,6 @@ install:
 script: source build_test.sh
 before_deploy:
 - python setup.py py2app # --verbose-interpreter
-- deactivate
 # - mkdir dist/nCoda.app/Contents/Resources/app
 # - mkdir dist/nCoda.app/Contents/Resources/app/node_modules
 - python package_ncoda_macOS.py
