--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ install:
 
 script: source build_test.sh
 before_deploy:
-- python setup.py py2app # --verbose-interpreter
+# - python setup.py py2app # --verbose-interpreter
 # - mkdir dist/nCoda.app/Contents/Resources/app
 # - mkdir dist/nCoda.app/Contents/Resources/app/node_modules
 - python package_ncoda_macOS.py
