--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ before_deploy:
 # - mkdir dist/nCoda.app/Contents/Resources/app/node_modules
 - python package_ncoda_macOS.py
 # - cp -r dist/nCoda.app nCoda.app/Contents/Resources/app/
-- hdiutil create -srcfolder dist/nCoda.app nCoda.dmg
+- hdiutil create -srcfolder nCoda.app nCoda.dmg
 deploy:
   provider: releases
   api_key:
