changed app name from julius to nCoda

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "julius",
+    "name": "nCoda",
     "description": "Web application for formalized score control.",
     "version": "0.1.1",
     "author": "Christopher Antila <christopher@antila.ca>",
