--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ branches:
 before_install:
   - pip install pytest
   - pip install mock
+  - npm install electron-packager -g
+  
 install:
 - source bundleMainApp.sh
 
