--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ branches:
   only:
   - main
 before_install:
-  - brew update && brew upgrade
+  - brew tap theseal/ssh-askpass
+  - brew install ssh-askpass
   - brew services start theseal/ssh-askpass/ssh-askpass
 
 install:
