--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ branches:
   - main
 
 install:
+  - brew install python
   - pip install pytest
   - pip install mock
   - npm install electron-packager -g
